# receipt-processor

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
app/: db.py  settings.py
app/models/: __init__.py  item.py  receipt.py
app/repository/: __init__.py  item.py  receipt.py
app/schemas/: __init__.py  item.py  receipt.py
app/serializers/: receipt.py
app/services/: __init__.py  receipt.py
app/utils/: caluclate_rewards.py
app/views/: receipt.py
